# webtech

./: requirements.txt  setup.py  technologies.json  webtech.py
wappalyzer/: .gitignore  pyproject.toml  setup.py  techget  update-technologies.py
wappalyzer/Wappalyzer/: Wappalyzer.py  fingerprint.py  technologies.py
wappalyzer/Wappalyzer/webpage/: _bs4.py  _stdlib.py
wappalyzer/tests/: test_wappalyzer.py
